# sen4cap-client

./: .gitignore  404.html  CHANGES.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-pypi.yaml
api/: index.html
cli/: index.html
contributing/: index.html
docs/: api.md  cli.md  client-api.md  client-cli.md  contributing.md  index.md  installation.md  start.md
docs/hooks/: notebooks_json_output.py
docs/notebooks/: README.md
hooks/notebooks_json_output/: index.html
installation/: index.html
notebooks/: client-api.ipynb  client-app.ipynb  client-cli.ipynb  client-gui.ipynb  index.html  sen4cap-api-demo.ipynb  sen4cap_request.json
notebooks/client-api/: index.html
notebooks/client-cli/: index.html
notebooks/client-gui/: index.html
notebooks/deprecated/: client-gui.ipynb  sen4cap-api-demo.ipynb
notebooks/test.zarr/: zarr.json
notebooks/test.zarr/a/c/0/0/: 0
notebooks/test.zarr/c/: zarr.json
notebooks/test.zarr/lat/: zarr.json
notebooks/test.zarr/lat/c/: 0
notebooks/test.zarr/lon/: zarr.json
notebooks/test.zarr/lon/c/: 0
overrides/css/: custom.css
request-format/: index.html
scripts/: integration_test.py
search/: search_index.json
src/sen4cap_client/: __init__.py  api.py  cli.py  defaults.py  gui.py  opener.py
src/tests/: __init__.py
tests/: schema2ui.py  test_api.py  test_cli.py  test_client.py  test_gui.py  test_opener.py
tests/schemas/: L3B_AOI_Indicators_Processor.yaml
