#  Copyright (c) 2025 by ESA Sen4CAP team and contributors
#  Permissions are hereby granted under the terms of the Apache 2.0 License:
#  https://opensource.org/license/apache-2-0.

[project]
name = "sen4cap-client"
version = "0.1.0.dev0"
description = "Python client for the ESA Sen4CAP project"
readme = "README.md"
authors = [
  {name = "Norman Fomferra (Brockmann Consult GmbH)"},
  {name = "Pontus Lurcock (Brockmann Consult GmbH)"}
]
keywords = [
  "agriculture-monitoring",
  "cloud-processing",
  "earth-observation",
  "eo",
  "sentinel-satellites",
  "copernicus",
  "sen4cap",
  "python",
  "esa",
  "zarr"
]
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
  "click",
  "pydantic",
  "pyyaml",
  "typer",
  "uri-template",
  "httpx",
  # Eozilla dependencies
#  "cuiman >=0.0.8",
#  "gavicore >=0.0.8",
]

[project.urls]
Documentation = "https://Sen4CAP.github.io/sen4cap-client"
Repository = "https://github.com/Sen4CAP/sen4cap-client"
Changelog = "https://github.com/Sen4CAP/sen4cap-client/blob/main/CHANGES.md"
Issues = "https://github.com/Sen4CAP/sen4cap-client/issues"

[project.scripts]
sen4cap-client = "sen4cap_client.cli:cli"

[build-system]
requires = ["hatch"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src/sen4cap_client/**/*",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
include = [
  "src/sen4cap_client/**/*"
]

# ---------------------------------------------------------------------
# Pixi project setup
# ---------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# Combined sub-workspace dependencies to prevent our editable
# PyPI dependencies (our project's sub-workspaces) to install
# PyPI packages instead of using conda packages.
click = "*"
fastapi = "*"
httpx = "*"
pydantic = ">=2,<3"
pydantic-settings = ">=2,<3"
pyyaml = "*"
typer = "*"
uri-template = "*"
uvicorn = "*"
# IDE integration
pixi-pycharm = ">=0.0.8,<0.0.9"
# Development & build tools
pip = "*"
hatch = "*"
# Code style & linting
isort = "*"
ruff = "*"
mypy = "*"
# Unit-testing
pytest = "*"
pytest-cov = "*"
# Client testing
ipyleaflet = "*"
ipywidgets = "*"
ipywidgets_bokeh = "*"
jupyter = "*"
notebook = "*"
panel = "*"
watchfiles = "*"
# Use cases testing
dask = "*"
xarray = "*"
zarr = "*"
# Documentation
mkdocs = "*"
mkdocs-autorefs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-jupyter = "*"
nbformat = "*"
# For mermaid diagrams in docs
pymdown-extensions = "*"
# Eozilla packages for development
# wraptile = ">=0.0.8"

[tool.pixi.pypi-dependencies]
sen4cap_client = { path = ".", editable = true }
#
# Uncomment the following to allow using eozilla from sources
# Note, using the wraptile server is for testing only
#
cuiman = { path = "./eozilla/cuiman", editable = true }
gavicore = { path = "./eozilla/gavicore", editable = true }
wraptile = { path = "./eozilla/wraptile", editable = true }


# ---------------------------------------------------------------------
# Pixi tasks
# ---------------------------------------------------------------------

# pixi run format

[tool.pixi.tasks.format]
depends-on = [
  "format-with-isort",
  "format-with-ruff",
]

[tool.pixi.tasks.format-with-isort]
cmd = "isort src tests"

[tool.pixi.tasks.format-with-ruff]
cmd = "ruff format src tests"

# pixi run checks

[tool.pixi.tasks.checks]
depends-on = [
  "check-with-ruff",
  "check-with-mypy",
]

[tool.pixi.tasks.check-with-ruff]
cmd = "ruff check src"

[tool.pixi.tasks.check-with-mypy]
cmd = "mypy src"

# pixi run tests

[tool.pixi.tasks.tests]
cmd = "pytest tests"

# pixi run coverage / coverage-ci

[tool.pixi.tasks.coverage]
depends-on = ["cov-base", "cov-report-html"]

[tool.pixi.tasks.coverage-ci]
depends-on = ["cov-base", "cov-report-xml"]

[tool.pixi.tasks.cov-report-html]
cmd = "coverage html -d .cov-report && coverage report"

[tool.pixi.tasks.cov-report-xml]
cmd = "coverage xml -o coverage.xml && coverage report"

[tool.pixi.tasks.cov-base]
cmd = "pytest --cov src/sen4cap_client --cov-report= --cov-append tests"
